# bazel-community-day-workshop

./: .bazelrc  .gitignore  README.md  WORKSPACE.bazel  compare_exec_logs.sh  diff.sh  go.mod  go.sum  run.sh
bazel/: BUILD.bazel.tpl  defs.bzl
docker/: BUILD.bazel  defs.bzl  entrypoint.sh  entrypoint.sh.tpl
gif/: BUILD.bazel
httpd/: BUILD.bazel
src/: BUILD.bazel  life.go
