load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "overlay",
    srcs = [
        ":entrypoint.sh",
        "//gif:animated",
    ],
)

oci_image(
    name = "image",
    base = "@ubuntu",
    tars = [
        ":overlay",
        "//httpd:closure",
    ],
    cmd = ["/entrypoint.sh"],
)

oci_tarball(
    name = "tarball",
    image = ":image",
    repo_tags = ["bazel-community-day-workshop:latest"],
)
