load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")

genrule(
    name = "overlay",
    srcs = [
        ":entrypoint.sh",
        "//gif:animated",
    ],
    outs = ["overlay.tar"],
    cmd = """
        mkdir overlay
        cp $(SRCS) overlay
        tar -cf $@ -C overlay .
    """,
)

oci_image(
    name = "image",
    base = "@ubuntu",
    tars = [
        ":overlay",
        "//httpd:closure",
    ],
    cmd = ["/entrypoint.sh"],
)

oci_tarball(
    name = "tarball",
    image = ":image",
    repo_tags = ["bazel-community-day-workshop:latest"],
)
